--- a/src/main/resources/properties/suite/web/suite.properties
+++ b/src/main/resources/properties/suite/web/suite.properties
@@ -1,3 +1,6 @@
-bdd.story-loader.batch-1.resource-location=story/web
-bdd.story-loader.batch-1.resource-include-patterns=*.story
+bdd.story-loader.batch-1.resource-location=story/trello
+bdd.story-loader.batch-1.resource-include-patterns=Task2.story
 bdd.batch-1.threads=2
+bdd.variables.global.registeredUserEmail=lirzatikku@nedoz.com
+bdd.variables.global.emailServer=mail.ru
+bdd.variables.global.password=QWER1234
